fixtures/frontend/milestone-1/invalid/record_missing_required_field.aivi
type Config = {
    host: Text,
    port: Int
}

value config:Config = {
    host: "localhost"
}
